# DevCred

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  clipboard.rs  credential.rs  crypto.rs  db.rs  injector.rs  main.rs  transfer.rs
src/tui/: mod.rs  ui.rs
