[package]
name = "devcred"
version = "0.1.1"
edition = "2021"
description = "DevCred - A local credential manager for developers with a TUI interface"
license = "MIT"
repository = "https://github.com/RestRegular/DevCred"

[[bin]]
name = "devcred"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encryption: AES-256-GCM + Argon2 KDF
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# Clipboard
arboard = "3"

# Filesystem / config dirs
dirs = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
anyhow = "1"
thiserror = "1"

# Fuzzy search
fuzzy-matcher = "0.3"

# Password input (no echo)
rpassword = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
